Omogućeno dinamičko učitavanje agenata za test kako bi se uklonio warning